--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-redis": "^2.5.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
+    "knex": "^0.8.6",
     "morgan": "~1.6.1",
+    "mysql": "^2.9.0",
+    "redis": "^2.0.1",
     "serve-favicon": "~2.3.0",
     "stylus": "0.42.3"
   }
