--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+# Config
+config/config.js
