--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "express-session": "^1.11.3",
     "knex": "^0.8.6",
+    "moment": "^2.10.6",
     "morgan": "~1.6.1",
     "mysql": "^2.9.0",
     "redis": "^2.0.1",
