--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "colors": "^1.1.2",
     "connect-redis": "^2.5.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
