--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mc_skins",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "~1.13.2",
     "colors": "^1.1.2",
     "connect-redis": "^2.5.1",
